data/derived/sp14/progs/unify/prog2294.ml.out
Characters 257-281:
  | (_, 2) -> buildTimes( (build(rand), depth - 1), build((rand +1), depth - 1) )
                          ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
